--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,298 @@
-/* место для вашего кода */
+.header {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  align-items: center;
+  margin: 92px 47px 92px 49px;
+}
+
+.header__links-list {
+  display: flex;
+  column-gap: 32px;
+  list-style: circle;
+  padding-top: 4px;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link {
+  font-size: 18px;
+  line-height: normal;
+  text-decoration: none;
+  border-bottom: 1px solid;
+}
+
+.header__link_active {
+  border-bottom: none;
+}
+
+.header__logo {
+  max-width: 148px;
+  max-height: 105px;
+  display: flex;
+  margin-left: 209px;
+}
+
+.address {
+  font-size: 18px;
+  font-style: normal;
+  display: flex;
+  flex-direction: column;
+  margin-right: 4px;
+  line-height: 22px;
+}
+
+.cover {
+  position: relative;
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 757px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.overlay {
+  opacity: 0.6;
+  background-color: #000;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.cover__title {
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: #fff;
+  z-index: 1;
+  display: grid;
+  padding: 173px 50px 0;
+  gap: 25px;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text__first {
+  letter-spacing: 7px;
+}
+
+.aligned-text__second {
+  letter-spacing: 52px;
+}
+
+.aligned-text_center {
+  display: block;
+  padding-left: 455px;
+}
+
+.aligned-text_center__first {
+  letter-spacing: 30px;
+}
+
+.aligned-text_center__second {
+  letter-spacing: 60px;
+  margin-left: -23px;
+}
+
+.aligned-text_right {
+  display: block;
+  text-align: end;
+}
+
+.aligned-text_right__first {
+  margin-right: 37px;
+}
+
+.aligned-text_right__second {
+  letter-spacing: 32px;
+  margin-right: -27px;
+}
+
+.cover__description {
+  color: #fff;
+  z-index: 1;
+  padding: 0 50px 50px;
+  display: flex;
+  justify-content: flex-end;
+  text-align: center;
+  align-items: center;
+  gap: 75px;
+}
+
+.cover__description-text {
+  font-size: 22px;
+  font-style: normal;
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 18px;
+}
+
+.bet-button {
+  font-family: Raleway, sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  line-height: 28px;
+  text-transform: uppercase;
+  min-width: 257px;
+  min-height: 52px;
+  color: #fff;
+  border: 2px solid #fff;
+  background-color: rgba(0, 0, 0, 0);
+  cursor: pointer;
+}
+
+.lots {
+  margin: 180px 50px;
+}
+
+.lots__heading {
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  margin-left: 40px;
+}
+
+.lots__card-list {
+  display: flex;
+  gap: 25px;
+  justify-content: center;
+  list-style: none;
+  margin: 28px 0;
+  flex-wrap: wrap;
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+.cards {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 450px;
+  width: 430px;
+  padding: 50px 40px;
+  justify-content: space-between;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__title {
+  font-size: 22px;
+  z-index: 1;
+  color: #fff;
+  line-height: 120%;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+}
+
+.card__text {
+  font-size: 20px;
+  z-index: 1;
+  color: #fff;
+}
+
+.lots__look-more-link {
+  font-size: 20px;
+  margin-left: 40px;
+  text-decoration: none;
+  border-bottom: 1px solid;
+}
+
+.about {
+  margin: 0 50px 180px 50px;
+  display: grid;
+  grid-template-columns: 430px 1fr;
+  justify-items: center;
+}
+
+.about__logo {
+  width: 240px;
+  height: 240px;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 120px;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__column {
+  padding-left: 25px;
+}
+
+.about__title {
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 100px 0;
+}
+
+.about__column-text {
+  display: flex;
+  gap: 25px;
+  flex-direction: column;
+}
+
+.about__text {
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.footer {
+  display: flex;
+  margin: 0 50px 90px;
+  justify-content: space-between;
+}
+
+.footer__links-list {
+  list-style: none;
+  text-align: center;
+}
+
+.footer__link {
+  font-size: 18px;
+  text-decoration: none;
+  border-bottom: 1px solid;
+}
+
+.footer__link_active {
+  border-bottom: none;
+}
+
+.footer__social-list {
+  display: flex;
+  gap: 48px;
+  list-style: none;
+}
+
+.footer__social-list-item {
+  width: 48px;
+}
